force-app/main/default/objects/IT_Hardware_Model__c/IT_Hardware_Model__c.object-meta.xml
<CustomObject>
    <description>IT hardware models for internal use.</description>
    <label>IT Hardware Model</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Hardware Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Hardware Models</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>