force-app/main/default/objects/IT_Hardware_Model__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APC</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Asus</fullName>
            </value>
            <value>
                <fullName>Avid</fullName>
            </value>
            <value>
                <fullName>Avocent</fullName>
            </value>
            <value>
                <fullName>BENQ</fullName>
            </value>
            <value>
                <fullName>Blackberry</fullName>
            </value>
            <value>
                <fullName>BlueCoat</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Compaq</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>D-Link</fullName>
            </value>
            <value>
                <fullName>Enterasys</fullName>
            </value>
            <value>
                <fullName>EPSON</fullName>
            </value>
            <value>
                <fullName>F5</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Gigabyte</fullName>
            </value>
            <value>
                <fullName>G RAID</fullName>
            </value>
            <value>
                <fullName>Hewlett-Packard</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>iiyama</fullName>
            </value>
            <value>
                <fullName>IOMEGA</fullName>
            </value>
            <value>
                <fullName>Juniper</fullName>
            </value>
            <value>
                <fullName>Junos</fullName>
            </value>
            <value>
                <fullName>JVC</fullName>
            </value>
            <value>
                <fullName>Kyocera</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Linksys</fullName>
            </value>
            <value>
                <fullName>LogicKeyboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>