force-app/main/default/objects/IT_Hardware_Model__c/fields/Model_Description__c.field-meta.xml
<CustomField>
    <fullName>Model_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>