force-app/main/default/objects/IT_Hardware_Model__c/fields/Model_Number__c.field-meta.xml
<CustomField>
    <fullName>Model_Number__c</fullName>
    <description>The Manufacturers series model number.</description>
    <label>Model Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Series__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>190s</fullName>
            </value>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>220</fullName>
            </value>
            <value>
                <fullName>2201w</fullName>
            </value>
            <value>
                <fullName>2202</fullName>
            </value>
            <value>
                <fullName>2202x</fullName>
            </value>
            <value>
                <fullName>2208W</fullName>
            </value>
            <value>
                <fullName>223</fullName>
            </value>
            <value>
                <fullName>230</fullName>
            </value>
            <value>
                <fullName>2330w</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>260</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>3540</fullName>
            </value>
            <value>
                <fullName>3550</fullName>
            </value>
            <value>
                <fullName>3560</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>400s</fullName>
            </value>
            <value>
                <fullName>410</fullName>
            </value>
            <value>
                <fullName>420</fullName>
            </value>
            <value>
                <fullName>430</fullName>
            </value>
            <value>
                <fullName>440</fullName>
            </value>
            <value>
                <fullName>440 G3</fullName>
            </value>
            <value>
                <fullName>440s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>