force-app/main/default/objects/IT_Hardware_Model__c/fields/Our_Price__c.field-meta.xml
<CustomField>
    <fullName>Our_Price__c</fullName>
    <inlineHelpText>Price we have acquired this model for in the past</inlineHelpText>
    <label>Asking Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>