force-app/main/default/objects/IT_Hardware_Model__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>i3</fullName>
            </value>
            <value>
                <fullName>i5</fullName>
            </value>
            <value>
                <fullName>i7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>