force-app/main/default/objects/IT_Hardware_Model__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <description>Series the equipment belongs to from manufacturer.</description>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Manufacturer__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brix</fullName>
            </value>
            <value>
                <fullName>Compaq</fullName>
            </value>
            <value>
                <fullName>Latitude E</fullName>
            </value>
            <value>
                <fullName>MacBook Pro</fullName>
            </value>
            <value>
                <fullName>MacMini</fullName>
            </value>
            <value>
                <fullName>Optiplex</fullName>
            </value>
            <value>
                <fullName>Precision</fullName>
            </value>
            <value>
                <fullName>Probook</fullName>
            </value>
            <value>
                <fullName>ProDesk</fullName>
            </value>
            <value>
                <fullName>Surface Book</fullName>
            </value>
            <value>
                <fullName>Surface Pro</fullName>
            </value>
            <value>
                <fullName>ThinkCentre M</fullName>
            </value>
            <value>
                <fullName>Thinkpad E</fullName>
            </value>
            <value>
                <fullName>Thinkpad P</fullName>
            </value>
            <value>
                <fullName>ThinkPad T</fullName>
            </value>
            <value>
                <fullName>ThinkPad W</fullName>
            </value>
            <value>
                <fullName>ThinkPad X</fullName>
            </value>
            <value>
                <fullName>Thinkstation S</fullName>
            </value>
            <value>
                <fullName>Viewsonic</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>XPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>