force-app/main/default/objects/IT_Hardware_Model__c/fields/User_Hardware_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Hardware_Model_Name__c</fullName>
    <description>Updated per NICC - 023230</description>
    <formula>TEXT(Manufacturer__c) 
+ &quot; &quot; + TEXT(Series__c) 
+ TEXT(Model_Number__c) 
+ IF (Touch__c, &quot; Touch &quot;,&quot;&quot;)
+ TEXT ( Configuration__c)</formula>
    <label>User Hardware Model Name</label>
    <type>Text</type>
</CustomField>