force-app/main/default/objects/IT_Hardware_Model__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hardware_Type__c</columns>
    <columns>Configuration__c</columns>
    <columns>Processor__c</columns>
    <columns>RAM__c</columns>
    <columns>Hard_Drive__c</columns>
    <columns>Our_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>