force-app/main/default/objects/IT_Hardware_Model__c/listViews/User_Hardware_Models.listView-meta.xml
<ListView>
    <fullName>User_Hardware_Models</fullName>
    <columns>NAME</columns>
    <columns>Configuration__c</columns>
    <columns>Processor__c</columns>
    <columns>RAM__c</columns>
    <columns>Hard_Drive__c</columns>
    <columns>Our_Price__c</columns>
    <columns>Hardware_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hardware_Type__c</field>
        <operation>equals</operation>
        <value>Laptop,Workstation</value>
    </filters>
    <label>User Hardware Models</label>
</ListView>